Closed Bug 640190 Opened 13 years ago Closed 13 years ago

Browser process dies, and second attempt hangs on restart when switching languages

Categories

(Firefox for Android Graveyard :: General, defect)

ARM
Android
defect
Not set
major

Tracking

(fennec2.0+)

VERIFIED FIXED
Tracking Status
fennec 2.0+ ---

People

(Reporter: aaronmt, Assigned: blassey)

References

Details

(Keywords: hang, regression)

Attachments

(4 files)

Mozilla/5.0 (Android; Linux armv7l; rv:2.0b13pre) Gecko/20110309 Firefox/4.0b13pre Fennec/4.0b6pre

Currently with the build above, on restart the browser process will die on first attempt, and hang on second attempt when I attempt to switch languages. Tested in a new profile.

Steps to Reproduce

1. Preferences -> change 'Auto Detect' to any other language, such as French.
2. Process dies, back to home screen
3. Start up Fennec again, Preferences -> French to Auto-Detect
4. Tap 'restart/accept changes'
5. Browser hangs.

Output in first attempt: 

I/ActivityManager(   96): Process org.mozilla.fennec (pid 15393) has died.
I/WindowManager(   96): WIN DEATH: Window{4073fd10 SurfaceView paused=false}
I/WindowManager(   96): WIN DEATH: Window{40d7eb20 org.mozilla.fennec/org.mozilla.fennec.App paused=false}


Output on second attempt:

I/GeckoAppJava(15521): GeckoAppShell.alertsProgressListener_OnCancel('addons'
E/GeckoLibLoad(15542): Loaded libs in 141ms total, 0 faults
D/dalvikvm(  222): GC_EXPLICIT freed 2K, 56% free 2967K/6727K, external 2211K/2692K, paused 76ms
D/dalvikvm(  184): GC_EXPLICIT freed 11K, 51% free 3300K/6663K, external 8682K/10435K, paused 63ms

Android 2.3.3
Nexus One
Keywords: hang
Severity: normal → major
nom'ing for blocking
tracking-fennec: --- → ?
WFM on droid 2 same build:
Mozilla/5.0 (Android; Linux armv71; rv2.0b13pre) Gecko/20110309 Firefox/4.0b13pre Fennec/4.0b6pre
Device: Droid 2 
OS: Android 2.2

I wonder if it's OS version/device issue?
This is probably the same as 640068
Assignee: nobody → blassey.bugs
tracking-fennec: ? → 2.0+
patch in 640068 fix this.
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → DUPLICATE
Assuming the second nightly for today 03/11 has the patch in  bug 640068, I'm still having this issue. Reopening so others can confirm on Nexus One's
Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
This works for me using the current nightly and my N1.
For me, i experiencing a different log.  my browser hangs when the restart dialog appears;  Nexus S, 2.3.3

STR: 
1) install Mozilla/5.0 (Android; Linux armv71; rv:2.0b13pre) Gecko/20110311 Firefox/4.0b13pre Fennec/4.0b6pre	
2) open prefs, change language from auto-detect to french
3) once restart dialog appears, fennec hangs.  need to force-kill app.

Logcat:  http://pastebin.mozilla.org/1149570

D/PhoneWindow(14783): couldn't save which view has focus because the focused view org.mozilla.gecko.GeckoSurfaceView@4062d438 has no id.
I/GeckoApp(14783): pause
V/RenderScript_jni(  194): surfaceCreated
V/RenderScript_jni(  194): surfaceChanged
I/GeckoAppJava(14783): surface destroyed
I/GeckoApp(14783): stop
W/IInputConnectionWrapper(
The following is a regression range I have narrowed down to the problem which is happening on my device. Each build was installed cleanly, with the prior uninstalled. A new profile is used.

Bad - 20110228053148
http://hg.mozilla.org/mozilla-central/rev/f7de2d113096

Good - 20110227053534
http://hg.mozilla.org/mozilla-central/rev/5ff5318a9b04

http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=5ff5318a9b04&tochange=f7de2d113096

Blassey, could it be this changeset http://hg.mozilla.org/mozilla-central/rev/b66fe2e433c9 with bug 635342. Would it be possible to get a try server build to test with this reverted if so?
How would I go about changing the language in that build?
(In reply to comment #14)
> How would I go about changing the language in that build?

You can add a language to any Fennec build. Try installing a langpack XPI from here:
http://ftp.mozilla.org/pub/mozilla.org/mobile/nightly/latest-mozilla-central-linux-l10n/
After installing http://ftp.mozilla.org/pub/mozilla.org/mobile/nightly/latest-mozilla-central-linux-l10n/fennec-4.0b6pre.fr.langpack.xpi, and selecting it, the browser process will not die anymore. Selecting automatic detection language, and hitting restart will not hang the browser. So the issue is in that changeset I posted in comment #12
Status: REOPENED → NEW
Attached patch patchSplinter Review
we're getting preference notifications that we don't handle. Passing those to the nsBaseAppShell causes the message loop to exit.

The fact that we're getting this extra notification isn't quite right since we're only, listening to these specific pref changes, but there's no reason to blindly pass all notifications we don't handle to the nsBaseAppShell, since it explicitly only wants xpcom-shutdown notifications.
Attachment #519161 - Flags: review?(doug.turner)
Comment on attachment 519161 [details] [diff] [review]
patch

Stealing review and rubber-stamping since dougt is out.  This looks sane, but I am not an expert on this code.
Attachment #519161 - Flags: review?(doug.turner) → review+
pushed http://hg.mozilla.org/mozilla-central/rev/6729d770f7a9
Status: NEW → RESOLVED
Closed: 13 years ago13 years ago
Resolution: --- → FIXED
Verified fixed with
Mozilla/5.0 (Android; Linux armv7l; rv:2.0b13pre) Gecko/20110315 Firefox/4.0b13pre Fennec/4.0b6pre
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: