bug 640190 - Browser process dies, and second attempt hangs on restart when switching languages r=crowder a=blocking-fennec